@@ -1,3 +1,3 @@
 #!/bin/sh
 
-Mlog -x $MTIMEOUT mserver5 --help
+Mlog -x mserver5 --help
