@@ -1,4 +1,4 @@
 @echo on
 @prompt # $t $g  
 
-	%MTIMEOUT% mserver5.exe --help
+	mserver5.exe --help
