@@ -1,3 +1,3 @@
 #!/bin/sh
 
-Mlog -x $MTIMEOUT mclient --help
+Mlog -x mclient --help
