@@ -1,3 +1,3 @@
 #!/bin/sh
 
-Mlog -x $MTIMEOUT msqldump --help
+Mlog -x msqldump --help
