@@ -1,3 +1,3 @@
 #!/bin/sh
 
-Mlog -x $MTIMEOUT tomograph --help
+Mlog -x tomograph --help
