@@ -1,4 +1,2 @@
 debian/tmp/usr/bin/Mdiff usr/bin
-debian/tmp/usr/bin/MkillUsers usr/bin
 debian/tmp/usr/bin/Mlog usr/bin
-debian/tmp/usr/bin/Mtimeout usr/bin
